Fixed spacing issue with unit buttons

--- a/src/features/settings/Settings.css
+++ b/src/features/settings/Settings.css
@@ -53,6 +53,7 @@
 }
 
 .settings-options {
+  margin-top: -1em;
   background: none;
   border: none;
   padding: none;
